Clicking on image in image editor or UV editor causes it to switch to a kind of linear interpolation. #77599

Closed
opened 2020-06-08 06:00:37 +02:00 by Alaska · 8 comments
Member

System Information
Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye
Graphics card: GTX 1050Ti 440.62

Blender Version
Broken: 2.90.0 f50222ba2e (2020-06-08 01:03)
Worked: 2.83 Release and I presume before 2.90.0 bdda53fdb2

Short description of error
Images in Image/UV editor seem to switch to a linear interpolation when you click on them. This is most noticeable with low resolution images or when you zoom in on a image.

This seems like a continuation of #77370.

Before clicking:
Before.png
After clicking:
After.png

Exact steps for others to reproduce the error

  1. Open an image editor and load in a image.
  2. Zoom in on it and click on the image, it should change to some form of linear interpolation.

Here's a .blend file you can test with: #77599 - Image editor interpolation.blend

**System Information** Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye Graphics card: GTX 1050Ti 440.62 **Blender Version** Broken: 2.90.0 `f50222ba2e` (2020-06-08 01:03) Worked: 2.83 Release and I presume before 2.90.0 bdda53fdb2 **Short description of error** Images in Image/UV editor seem to switch to a linear interpolation when you click on them. This is most noticeable with low resolution images or when you zoom in on a image. This seems like a continuation of #77370. Before clicking: ![Before.png](https://archive.blender.org/developer/F8596686/Before.png) After clicking: ![After.png](https://archive.blender.org/developer/F8596689/After.png) **Exact steps for others to reproduce the error** 1. Open an image editor and load in a image. 2. Zoom in on it and click on the image, it should change to some form of linear interpolation. Here's a .blend file you can test with: [#77599 - Image editor interpolation.blend](https://archive.blender.org/developer/F8596717/T77599_-_Image_editor_interpolation.blend)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

#77679 was marked as duplicate of this issue

#77679 was marked as duplicate of this issue

Added subscriber: @MarioTovirac

Added subscriber: @MarioTovirac
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

bdda53fdb2 made this blurry, ba5b303c88 wasnt enough (to survive the click)

CC @fclem

bdda53fdb2 made this blurry, ba5b303c88 wasnt enough (to survive the click) CC @fclem

This issue was referenced by d12f6a90b1

This issue was referenced by d12f6a90b19084fa0ab1689a01b11a7b6cfa1cca

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-10 13:37:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77599
No description provided.