Fix T77599 Image UV editor use linear interpolation